--- a/Testify.Infrastructure/Testify.Infrastructure.csproj
+++ b/Testify.Infrastructure/Testify.Infrastructure.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\Testify.Core\Testify.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UnitOfWork\" />
+  </ItemGroup>
+
 </Project>
