Finished with repository pattren and UnitOfwork

--- a/TestifyWebAPI/appsettings.json
+++ b/TestifyWebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TestifyDB.db"
+    "DefaultConnection": "Data Source=../Testify.Infrastructure/TestifyDB.db"
   }
 }
 
